soil classes and land cover classes

--- a/notebook/soil.ipynb
+++ b/notebook/soil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import rasterio as rio\n",
     "from rasterio import transform\n",
-    "from rasterio.features import rasterize"
+    "from rasterio.features import rasterize\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +269,7 @@
        "[5882 rows x 7 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,17 +293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_14044\\356341767.py:39: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  soil_pedo = soil_pedo.replace({\"score\": remap_soil_pedo_score})\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -530,7 +523,7 @@
        "[5882 rows x 8 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +890,7 @@
        "[48923 rows x 12 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1243,7 @@
        "[48923 rows x 13 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,17 +1266,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_14044\\1357228447.py:48: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  soil_area_unit = soil_area_unit.replace({\"score\": remap_soil_score})\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1635,7 +1620,7 @@
        "[48923 rows x 14 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2057,7 @@
        "[54805 rows x 16 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,43 +2070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_14044\\1747173741.py:1: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  soil_combined.to_file(\"../output/soil_nl_en_scored.shp\")\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'maparea_collection' to 'maparea_co'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'beginlifespan' to 'beginlifes'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'endlifespan' to 'endlifespa'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'soilunit_code' to 'soilunit_c'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'soilunit_sequencenumber' to 'soilunit_s'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'soilclassification' to 'soilclassi'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'mainsoilclassification' to 'mainsoilcl'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'classification_en' to 'classifica'\n",
-      "  ogr_write(\n",
-      "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'pedologicalinterest' to 'pedologica'\n",
-      "  ogr_write(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "soil_combined.to_file(\"../output/soil_nl_en_scored.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2144,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2118,7 @@
        "      shape=(31225, 26446), dtype=int16)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2180,9 +2138,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CPLE_AppDefinedError",
+     "evalue": "Deleting ../output/soil_nl_raster_score.tif failed: Permission denied",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCPLE_AppDefinedError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[126], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Save the raster\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m rio\u001b[38;5;241m.\u001b[39mopen(\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../output/soil_nl_raster_score.tif\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCOG\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      6\u001b[0m     count\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m      7\u001b[0m     width\u001b[38;5;241m=\u001b[39mraster\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m      8\u001b[0m     height\u001b[38;5;241m=\u001b[39mraster\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m      9\u001b[0m     nodata\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9999\u001b[39m,\n\u001b[0;32m     10\u001b[0m     compress\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlzw\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     11\u001b[0m     transform\u001b[38;5;241m=\u001b[39maffine_transform,\n\u001b[0;32m     12\u001b[0m     crs\u001b[38;5;241m=\u001b[39mcrs,\n\u001b[0;32m     13\u001b[0m     dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mint16\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     14\u001b[0m ) \u001b[38;5;28;01mas\u001b[39;00m source:\n\u001b[0;32m     15\u001b[0m     source\u001b[38;5;241m.\u001b[39mwrite(raster, \u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[1;32mrasterio\\\\_base.pyx:450\u001b[0m, in \u001b[0;36mrasterio._base.DatasetBase.__exit__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_base.pyx:439\u001b[0m, in \u001b[0;36mrasterio._base.DatasetBase.close\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_io.pyx:2475\u001b[0m, in \u001b[0;36mrasterio._io.BufferedDatasetWriterBase.stop\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_io.pyx:322\u001b[0m, in \u001b[0;36mrasterio._io._delete_dataset_if_exists\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_err.pyx:289\u001b[0m, in \u001b[0;36mrasterio._err.exc_wrap_int\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCPLE_AppDefinedError\u001b[0m: Deleting ../output/soil_nl_raster_score.tif failed: Permission denied"
+     ]
+    }
+   ],
    "source": [
     "# Save the raster\n",
     "with rio.open(\n",
@@ -2203,9 +2178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"1\": \"Heavily raised terrain\", \"2\": \"Terp\", \"3\": \"Heavily leveled\", \"4\": \"Heavily processed terrain\", \"5\": \"Heavily excavated terrain\", \"6\": \"Quarry\", \"7\": \"Water\", \"8\": \"Swamp\", \"9\": \"Built-up area\", \"10\": \"Dike\", \"11\": \"Mine dump\", \"12\": \"Upland\", \"13\": \"Land raised with household waste\", \"14\": \"Thick peat soils\", \"15\": \"Peat soils\", \"16\": \"Podzol soils\", \"17\": \"Non-calcareous sandy soils\", \"18\": \"Brick soils\", \"19\": \"Marine clay soils\", \"20\": \"Loam soils\", \"21\": \"River clay soils\", \"22\": \"Defined associations\", \"23\": \"Boggy soils\", \"24\": \"Very old marine deposits\", \"25\": \"Old river clay soils\", \"26\": \"Very old fluvial deposits\", \"27\": \"Unmatured mineral soils\", \"28\": \"Calcareous sandy soils\", \"29\": \"Boulder clay soils\", \"30\": \"Limestone weathering soils\"}\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2606,7 +2588,7 @@
        "[54805 rows x 17 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,8 +2667,12 @@
     "class_ids = list(map(lambda x: int(x), class_ids))\n",
     "\n",
     "remap_class_id = {}\n",
+    "remap_class_ids = {}\n",
     "for x in range(len(class_ids)):\n",
     "    remap_class_id[categorical_en[x]] = class_ids[x]\n",
+    "    remap_class_ids[class_ids[x]] = categorical_en[x]\n",
+    "\n",
+    "print(json.dumps(remap_class_ids))\n",
     "\n",
     "soil_categorical = soil_categorical.replace({\"classification_id\": remap_class_id})\n",
     "soil_categorical"
